# cpp_epic_template

./: INSTALL.md  README.md  configure  gen  meson.build  run
include/: meson.build
include/example/: example.hpp  meson.build
src/: config.hpp.in  main.cpp  meson.build  message.txt
tests/: basic.cpp  meson.build
